chore: 调试sync-wiki.yml

--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -20,7 +20,8 @@ jobs:
         git config --global user.name "rayallen001"
         git config --global user.email "yangzhou3932541@126.com"
         git clone https://github.com/rayallen001/article.wiki.git wiki
-        cp -rf ./ wiki/
+        pwd
+        cp -rf ./* wiki/
         cd wiki
         git add .
         git commit -m "Sync from main branch"
