--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -17,6 +17,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        git config --global user.name rayallen001
+        git config --global user.email yangzhou3932541@126.com
         git clone https://github.com/rayallen001/article.wiki.git wiki
         pwd
         cp -rf README.md wiki/
